
  Changes:
    - Army deploying now supports unit deployer that doesn't use electricity.
    - Changed some of the feature_flags.space_travel check to check for mods['space-age'] instead.
    - Added big-splitter and big-biter to tier 3 droppable units.    
    - Improved surface manager compatibility with 3rd party enemy autoplaces.

  Bugfixes:
    - Fixed a startup crash when mech-armor is removed by other mods.
    - Fixed skip_roll_quality on customer_attack_helper is not properly assigned.
    - Fixed a startup crash when modded asteroid doesn't have resistance table.
    - Fixed an issue which pick surface function did not properly handle attack_heat_last_surface under certain circumstances.

---------------------------------------------------------------------------------------------------
Version: 2.0.25
Date: 2024-03-30
  
  Changes:
    - updated bob damage types for ERM enemy resistances table changes.
    - Lock spawner_evolution_factor_health_modifier at 10 (default value).  Overrides other mods as it affects ERM spawner HP balance. 
    - Add notes to Mod Compatibility regarding to Bob_enemies.

  Bugfixes:
    - Fixed a startup crash from quality register when Bobenemies 2.0 enables.

---------------------------------------------------------------------------------------------------
Version: 2.0.24
Date: 2024-03-13

  Changes:
    - Updated Mod-Compatibility document regarding to mods that modify planet nauvis prototype (Solar System++).
    - Removed Colony Builder from Mod-Compatibility document. It's no longer crashed in Factorio 2.0.40 build and seems work with ERM unit control.

  Bugfixes:
    - Fixed a crash when a primitive force tried to generate a scout, which it does not have scout.
    - Fixed a startup crash when other mods wiped nauvis map_gen_settings.

---------------------------------------------------------------------------------------------------
Version: 2.0.23
Date: 2024-03-11

  Bugfixes: