@@ -1,0 +1,77 @@
+---
+--- Generated by EmmyLua(https://github.com/EmmyLua)
+--- Created by heyqule.
+--- DateTime: 3/30/2025 2:13 PM
+---
+local enemy_autoplace = require ("prototypes.enemy-autoplace")
+local String = require('__erm_libs__/stdlib/string')
+local tally_point = {
+    type = "script",
+    effect_id = QUALITY_TALLY_POINT
+}
+
+local function add_tally_point(entity)
+    if (type(entity.dying_trigger_effect) == "table") then
+        table.insert(entity.dying_trigger_effect, tally_point)
+    else
+        entity.dying_trigger_effect = {
+            tally_point
+        }
+    end
+end
+
+local seed = 1000
+for _, spawner in pairs(data.raw["unit-spawner"]) do
+    if string.find(spawner.name, 'bob-', nil, true) then
+        seed = seed + 1
+        if not string.find(spawner.name, '0', nil, true) then
+            print(spawner.name..' setting build_base_evolution_requirement = 0.5 and update autoplace')
+            spawner.build_base_evolution_requirement = 0.5
+            spawner["autoplace"] = enemy_autoplace.enemy_spawner_autoplace({
+                probability_expression = "enemy_autoplace_base(0, "..seed..")",
+                force = FORCE_NAME,
+            })
+        else
+            print(spawner.name..' setting update autoplace for 0 spawner')
+            spawner["autoplace"] = enemy_autoplace.enemy_spawner_autoplace({
+                probability_expression = "enemy_autoplace_base(0, "..seed..")",
+                force = FORCE_NAME,
+            })
+            spawner.build_base_evolution_requirement = 0.2
+        end
+        add_tally_point(spawner)
+    end
+end
+
+local distances = {
+    small = 2,
+    medium = 4,
+    big = 6,
+    huge = 8,
+    giant = 12,
+    titan = 16,
+    behemoth = 24,
+    leviathan = 32,
+}
+for _, turret in pairs(data.raw["turret"]) do
+    if string.find(turret.name, 'bob-', nil, true) then
+        seed = seed + 1
+        local nameTokens = String.split(turret.name, "-")
+        local size = nameTokens[2]
+        if distances[size] then
+            print(turret.name..' setting build_base_evolution_requirement = 0.5 and update autoplace')
+            turret.build_base_evolution_requirement = 0.5
+            turret["autoplace"] = enemy_autoplace.enemy_worm_autoplace({
+                probability_expression = "enemy_autoplace_base("..distances[size]..", "..seed..")",
+                force = FORCE_NAME,
+            })
+        end
+        add_tally_point(turret)
+    end
+end
+
+for _, unit in pairs(data.raw["unit"]) do
+    if string.find(unit.name, 'bob-', nil, true) then
+        add_tally_point(unit)
+    end
+end 
