@@ -11,3 +11,11 @@ require "prototypes/compatibility/setting-updates.lua"
 if DEBUG_MODE then
     data.raw["int-setting"]['enemyracemanager-factoriopedia-level'].default_value = 5
 end
+
+--- Force these two to be enable.
+if mods["rso-mod"] then
+    data.raw["bool-setting"]["rso-vanilla-biter-generation"].hidden = true
+    data.raw["bool-setting"]["rso-vanilla-biter-generation"].forced_value = true
+    data.raw["bool-setting"]["rso-biter-generation"].hidden = true
+    data.raw["bool-setting"]["rso-biter-generation"].forced_value = false
+end
